fix whitespaces being trimmed

--- a/src/components/console/console.scss
+++ b/src/components/console/console.scss
@@ -56,6 +56,7 @@ $text-console-line-height: 20px;
 .console-input-prompt {
     font-size: $text-console-text-size;
     line-height: $text-console-line-height;
+    white-space: pre-wrap;
 }
 
 .console-input {
